modif avec emoji

--- a/index.html
+++ b/index.html
@@ -187,24 +187,24 @@
   <script>
     // Messages
     const messagesHer = {
-      1: "Tu sens meilleur qu'un sctroumpf...",
-      2: "J'ai jamais vu une fille aussi jolie que toi",
-      3: "Tu me manques déjà...",
-      4: "Passe une journée aussi belle que toi (géniale du coup)",
-      5: "Je te laisserais jamais de toute la vie",
-      6: "Je suis super fier de toi",
-      7: "J'ai jamais manger un truc aussi bon que toi",
-      8: "Je préfère toi aux pokemon",
-      9: "Tu es la fille la plus drole de tout Chemilly",
-      10: "T'as le plus beau sourire de la terre",
-      11: "J'aime tout de toi sauf quand tu me pete au nez",
-      12: "J'ai envie de te manger tout cru",
+      1: "Tu sens meilleur qu'un sctroumpf...🙃",
+      2: "J'ai jamais vu une fille aussi jolie que toi 😶",
+      3: "Tu me manques déjà... 🤨",
+      4: "Passe une journée aussi belle que toi (géniale du coup) ☀️",
+      5: "Je te laisserais jamais de toute la vie 😚",
+      6: "Je suis super fier de toi 😉",
+      7: "J'ai jamais manger un truc aussi bon que toi 😶",
+      8: "Je préfère toi aux pokemon 😚",
+      9: "Tu es la fille la plus drole de tout Chemilly 🤣",
+      10: "T'as le plus beau sourire de la terre 😉",
+      11: "J'aime tout de toi sauf quand tu me pete au nez 😶",
+      12: "J'ai envie de te manger tout cru 😮‍💨",
       13: "",
       14: "",
-      15: "",
+      15: "Tu me donnes un peu trop chaud 🤒",
       16: "",
       17: "",
-      18: "J'ai encore envie de te manger tout cru...",
+      18: "J'ai encore envie de te manger tout cru... 😮‍💨",
       19: "",
       20: "",
       21: "Je suis amoureux grand comme l'univers",
