ajt cases manquantes

--- a/index.html
+++ b/index.html
@@ -199,18 +199,18 @@
       10: "T'as le plus beau sourire de la terre 😉",
       11: "J'aime tout de toi sauf quand tu me pete au nez 😶",
       12: "J'ai envie de te manger tout cru 😮‍💨",
-      13: "",
-      14: "",
+      13: "Tu me manques déjà 😶",
+      14: "T'es la plus belle de toute la terre 😚",
       15: "Tu me donnes un peu trop chaud 🤒",
-      16: "",
-      17: "",
+      16: "Arrête d'être aussi belle j'arrive plus à parler sans begayer...",
+      17: "T'es aussi jolie qu'un pissenlit ☀️",
       18: "J'ai encore envie de te manger tout cru... 😮‍💨",
-      19: "",
-      20: "",
-      21: "Je suis amoureux grand comme l'univers",
-      22: "",
-      23: "",
-      24: "",
+      19: "Je pense que je vais finir par être accro à toi 🙃",
+      20: "Tu me manques un peu trop...",
+      21: "Je suis amoureux grand comme l'univers 😶",
+      22: "C'est légal d'être aussi incroyable ? 😶",
+      23: "J'ai vérifié, t'es toujours mon point faible 😮‍💨",
+      24: "T'es la fille la plus géniale du monde",
       25: "Je t'aime"
     };
 
